--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Main Content Section -->
     <main class="main-content">
         <div class="section">
-            <img src="images/picture1.jpg" alt="This is Chris">
+            <img src="images/picture1.jpg" alt="This is Chris" style="width: 300px; height: auto;">
             <div class="section-text">
                 <h2>Feature 1</h2>
                 <p>Discover the unparalleled comfort and style of The Coat, designed for all seasons and occasions.</p>
